<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Teahour.fm</string>
    <string name="text_play_time_default">00:00</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_overflow">More</string>
    <string name="action_share">Share</string>
    <string name="action_podcast">PodCast</string>
    <string name="action_newsletter">Newsletter</string>
    <string name="action_open_source">Open Source</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_exit_app">Exit App</string>
    <string name="action_share_to_wechat">WeChat</string>
    <string name="action_share_to_twitter">Twitter</string>
    <string name="action_share_to_weibo">Weibo</string>
    <string name="action_share_to_facebook">Facebook</string>
    <string name="action_refresh">Refresh</string>

    <string name="url_podcat">http://itunes.apple.com/cn/podcast/teahour.fm/id608387170?l=en</string>
    <string name="url_newsletter">http://pragmatic.us5.list-manage1.com/subscribe/post?u=73dd7c7fe45b53ba8e6ca952d&#38;id=2bcf4ff1fe&#38;EMAIL=</string>
    <string name="url_open_source">https://gitcafe.com/teahour/site</string>
    <string name="url_weibo">http://weibo.com/teahourfm</string>
    <string name="url_twitter">http://twitter.com/teahourfm</string>
    <string name="url_facebook">http://facebook.com/teahourfm</string>

    <string name="title_action_main">Teahour.fm</string>
    <string name="title_activity_about">About Teahour.fm</string>
    <string name="title_activity_webview">@string/app_name</string>
    <string name="title_activity_setting">Settings</string>
    <string name="title_activity_newsletter">Newsletter</string>
    <string name="title_exit_app_dialog">Exit App</string>

	<string name="text_teahour_fm_introduce_info">Teahour.fm by Terry Tai, Dingding Ye, Daniel Lv, Kevin Wang and Xdite Cheng chair, 
	    will focus on topics of interest to programmers, including Web design and development, 
	    mobile application design and development, entrepreneurship and everything Geek topic.</string>
	<string name="text_made_by_info">ATeahour.fm made by inferjay</string>
	<string name="text_teahour_fm_host">Host:</string>
	<string name="text_teahour_fm_guests">Guests:</string>
	<string name="text_teahour_fm_tipcs">Topic:</string>
	<string name="text_teahour_fm_show_notes">Show Notes:</string>
	<string name="text_teahour_fm_more_resources">More Resources »</string>
	<string name="text_share_content_titel_prefix">Recommend Teahour </string>

    <string name="hint_email_newsletter_text">Email</string>
	
	<string name="key_pref_wifi_auto_play">key_pref_wifi_auto_play</string>
	<string name="key_pref_2g3g4g_auto_play">key_pref_2g3g4g_auto_play</string>
	<string name="key_pref_clean_download_cache">key_pref_clean_download_cache</string>
	<string name="key_pref_feedback">key_pref_feedback</string>
	<string name="key_pref_check_new_version">key_pref_check_new_version</string>
	<string name="key_pref_about_teahour_fm">key_pref_about_teahour_fm</string>
	<string name="key_pref_about_creater">key_pref_about_creater</string>
	
	<string name="text_pref_about_teahour_fm">About Teahour.fm</string>
	<string name="text_pref_wifi_auto_play">WiFi Network Auto Play</string>
	<string name="text_pref_2g3g4g_auto_play">2G/3G/4G Network Auto Play</string>
	<string name="title_pref_header_network">Network</string>
	<string name="title_pref_header_download">Download</string>
	<string name="title_pref_header_problem">Problem</string>
	<string name="title_pref_header_about">About</string>
	<string name="text_pref_clean_download_cache">Clean Cache</string>
	<string name="text_pref_check_new_version">Check New Version</string>
	<string name="text_pref_check_new_version_summry">Current Version V</string>
	<string name="text_pref_feedback">Feedback</string>
	<string name="text_pref_about_creater">About Creater</string>
	
	<string name="url_feedback">https://github.com/inferjay/ATeahour.fm/issues</string>
	<string name="url_creater_site">http://www.github.com/inferjay</string>

    <string name="text_msg_exit_app">Are you sure exit app?</string>
    <string name="text_msg_please_inmput_email">Please enter your email!</string>
    <string name="text_msg_loaddata_error">The data load failure</string>
    <string name="text_msg_no_data">No Data</string>
    <string name="text_msg_no_share_data">Can not share the content</string>
    <string name="text_msg_invalid_email">Invalid Email Address</string>
    <string name="text_msg_is_new_version">The current is the latest version</string>
    <string name="text_msg_none_wifi">No wifi connection, only update on wifi</string>
    <string name="text_msg_timeout">Network connection timeout</string>
    <string name="text_msg_newsletter_subscibe_success">Subscibe Success</string>
    <string name="text_msg_newsletter_subscibe_fail">Subscibe Fail</string>
    <string name="text_msg_newsletter_subscibe_almost_finished">&lt;html&gt;&lt;body&gt;&lt;p&gt;&lt;strong&gt;Almost finished&#8230;&lt;strong/&gt;&lt;p/&gt;We need to confirm your email address.&lt;br/&gt;&lt;br/&gt;To complete the subscription process, please click the link in the email we just sent you.&lt;body/&gt;&lt;html/&gt;</string>
    <string name="text_msg_newslette_already_subscibed">&lt;html&gt;&lt;body&gt;&lt;p style=\"color:#e85c41;font-weight:bold;\"&gt;%s is already subscribed to list Teahour.fm. &lt;a href=\"http://fengcheco.us5.list-manage1.com/subscribe/send-email?u=73dd7c7fe45b53ba8e6ca952d&amp;id=2bcf4ff1fe&amp;e=aW5mZXJqYXlAZ21haWwuY29t\"&gt;Click here to update your profile.&lt;/a&gt;&lt;/p&gt;&lt;body/&gt;&lt;html/&gt;</string>
    <string name="text_msg_newsletter_already_subscibe_success">Already Subscibed</string>
    <string name="text_mag_newsletter_subscibing">Subsicbe&#8230;</string>

    <string name="text_newsletter_subscribe">Subscribe</string>
</resources>
