<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".TeahourFMMainActivity" >
    <!--<item-->
        <!--android:id="@+id/action_refresh"-->
        <!--android:icon="@drawable/ic_action_refresh_white"-->
        <!--android:showAsAction="always"-->
        <!--android:title="@string/action_refresh"/>-->

    <item android:id="@+id/action_share_to"
        android:title="@string/action_share"
        android:icon="@drawable/ic_action_share"
        android:orderInCategory="100"
        android:showAsAction="always" >
        <menu>
            <item android:id="@+id/action_share_to_wechat"
		        android:title="@string/action_share_to_wechat"
		        android:orderInCategory="100" 
		        android:icon="@drawable/ic_menu_wechat_moments"
		        android:showAsAction="always"/>
            <item android:id="@+id/action_share_to_weibo"
		        android:title="@string/action_share_to_weibo"
		        android:orderInCategory="100" 
		        android:icon="@drawable/ic_menu_weibo"
		        android:showAsAction="always" />
<!--             <item android:id="@+id/action_share_to_twitter"
		        android:title="@string/action_share_to_twitter"
		        android:orderInCategory="100" 
		        android:icon="@drawable/ic_menu_twitter"
		        android:showAsAction="always" />
            <item android:id="@+id/action_share_to_facebook"
		        android:title="@string/action_share_to_facebook"
		        android:orderInCategory="100" 
		        android:icon="@drawable/ic_menu_facebook"
		        android:showAsAction="always" /> -->
        </menu>
    </item>
    <item
	    android:id="@+id/action_overflow"
	    android:icon="@drawable/ic_action_overflow"
	    android:orderInCategory="101"
	    android:showAsAction="always"
	    android:title="@string/action_overflow"> 
	    <menu>    
		    <item android:id="@+id/action_podcast"
		        android:title="@string/action_podcast"
		        android:orderInCategory="100" 
		        android:icon="@drawable/ic_menu_podcast"
		        android:showAsAction="always" />
		    
		    <item android:id="@+id/action_newsletter"
		        android:title="@string/action_newsletter"
		        android:orderInCategory="100" 
		        android:icon="@drawable/ic_menu_email" 
		        android:showAsAction="always"/>
		    
		    <item android:id="@+id/action_open_source"
		        android:title="@string/action_open_source"
		        android:orderInCategory="100"
		        android:icon="@drawable/ic_menu_open_sources" 
		        android:showAsAction="always" />
		    
		    <item android:id="@+id/action_settings"
		        android:title="@string/action_settings"
		        android:orderInCategory="100"
		        android:icon="@drawable/ic_menu_settings"
		        android:showAsAction="always" />
		        
<!-- 		    <item android:id="@+id/action_about"
		        android:title="@string/action_about"
		        android:orderInCategory="100"
		        android:icon="@drawable/ic_menu_about"
		        android:showAsAction="always" /> -->
		    
		    <item android:id="@+id/action_exit_app"
		        android:title="@string/action_exit_app"
		        android:orderInCategory="100" 
		        android:icon="@drawable/ic_menu_exit_app"
		        android:showAsAction="always"/>
    	</menu>
    </item>
</menu>
